ref:updated student dashboard

--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -158,7 +158,7 @@
                             <span class="fs-6 text-uppercase fw-semibold">Reserved Books</span>
                         </div>
                         <div>
-                            <span class=" fe fe-books fs-3 text-primary"></span>
+                            <span class=" fe fe-book fs-3 text-primary"></span>
                         </div>
                     </div>
                     <h2 class="fw-bold mb-1">
