--- a/lms/templates/student/dashboard.html
+++ b/lms/templates/student/dashboard.html
@@ -9,6 +9,8 @@
             <div class="border-bottom pb-3 mb-3 d-lg-flex justify-content-between align-items-center">
                 <div class="mb-3 mb-lg-0">
                     <h1 class="mb-0 h2 fw-bold">Dashboard</h1>
+                    <h1 class="mb-0 h5 fw-light">Welcome Back, {{current_user.name}}.</h1>
+
                 </div>
                 <div class="d-flex">
                     <div class="input-group me-3  ">
@@ -258,11 +260,19 @@
                                 </td>
 
                                 <td>
+                                    {% if issue.return_date is none %}
+                                    <h5 class="mb-0">
+                                        <a href="#" class="text-inherit">
+                                            Not returned
+                                        </a>
+                                    </h5>
+                                    {% else %}
                                     <h5 class="mb-0">
                                         <a href="#" class="text-inherit">
                                             {{issue.return_date.strftime('%Y-%m-%d ') }}
                                         </a>
                                     </h5>
+                                    {% endif %}
                                 </td>
 
                             </tr>
