--- a/lms/templates/student/base.html
+++ b/lms/templates/student/base.html
@@ -97,53 +97,27 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.category')}}">
-                            <i class="nav-icon fe fe-book me-2"></i> View Book Category 
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.issued_book')}}">
-                            <i class="nav-icon fe fe-book me-2"></i> Issued Books
+                        <a class="nav-link " href=" {{ url_for('student.issue_history')}}">
+                            <i class="nav-icon fe fe-book me-2"></i>View Issued Books 
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.reserve')}}">
-                            <i class="nav-icon fe fe-book me-2"></i> Reserved Books
+                        <a class="nav-link " href=" {{ url_for('student.reserve_history')}}">
+                            <i class="nav-icon fe fe-book me-2"></i>View Reserved Books 
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <div class="nav-divider"></div>
-                    </li>
-
-
-                    <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.author')}}">
-                            <i class="nav-icon fe fe-user-check  me-2"></i> View Authors
+                        <a class="nav-link " href=" {{ url_for('student.fine')}}">
+                            <i class="nav-icon fe fe-file me-2"></i> View Fines
                         </a>
                     </li>
 
-
-                    <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.students')}}">
-                            <i class="nav-icon fe fe-users me-2"></i> View Students 
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <div class="nav-divider"></div>
-                    </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.issued_book')}}">
-                            <i class="nav-icon fe fe-file me-2"></i>View Transactions
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('librarian.fine')}}">
-                            <i class="nav-icon fe fe-file me-2"></i> View Student Fines
+                        <a class="nav-link " href=" {{ url_for('student.transaction')}}">
+                            <i class="nav-icon fe fe-book me-2"></i> View Transactions
                         </a>
                     </li>
                     
@@ -155,7 +129,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link " href=" {{ url_for('auth.logout_librarian')}}">
+                        <a class="nav-link " href=" {{ url_for('auth.logout_student')}}">
                             <i class="nav-icon fe fe-log-out me-2"></i> Logout
                         </a>
                     </li>
