ref: updated student issue logic

--- a/lms/templates/librarian/books.html
+++ b/lms/templates/librarian/books.html
@@ -129,7 +129,7 @@
                                                     <div class="d-flex align-items-center">
                                                         <div>
                                                             <img src="{{ url_for('librarian.upload', filename=books.img_upload)}}"
-                                                                alt="" class="img-4by3-md rounded">
+                                                                alt="" class="img-4by3-md rounded photo">
                                                         </div>
                                                     </div>
                                                 </a>
