--- a/lms/templates/librarian/dashboard.html
+++ b/lms/templates/librarian/dashboard.html
@@ -9,6 +9,8 @@
             <div class="border-bottom pb-3 mb-3 d-lg-flex justify-content-between align-items-center">
                 <div class="mb-3 mb-lg-0">
                     <h1 class="mb-0 h2 fw-bold">Dashboard</h1>
+                    <h1 class="mb-0 h5 fw-light">Welcome Back, {{current_user.name}}.</h1>
+
                 </div>
                 <div class="d-flex">
                     <div class="input-group me-3  ">
